Set workshop inscriptions

--- a/src/templates/landing_3/common/_base.html
+++ b/src/templates/landing_3/common/_base.html
@@ -277,7 +277,7 @@
                             else if(data.validate_assistance_type){
                                 var register_form = $('.formRegistro')
                                 register_form.hide();
-                                $('.b2PopupConfirm').addClass('active');
+                                $('.confirmPresence').addClass('active');
                             }
                             else{
                                 window.location.href = '/generar-credencial'
