--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -350,7 +350,7 @@
 </div>
 <div class="g8PopupForm b2PopupConfirm confirmPresence pr">
     <div class="g8PopupContent">
-        <h3>Deseas inscribirte?</h3>
+        <h3>Registro exitoso</h3>
         <div class="gParrafo">
             <p>Tu registro se ha compleado, ¿Deseas asistir al evento de forma Presencial?</p>
         </div>
