--- a/src/templates/landing_3/home.html
+++ b/src/templates/landing_3/home.html
@@ -133,7 +133,7 @@
                         <div class="b2LeftInfo">
                             <h4>{{schedule.name}}</h4>
                             <p>{{schedule.start_time}} a {{schedule.end_time}}</p>
-                            {{schedule.description|safe}}
+                            <p>{{schedule.description|safe}}</p>
                         </div>
                         <div class="b2RightInfo">
                             {% comment %} <p class="hour">{{schedule.start_time}} a {{schedule.end_time}}</p> {% endcomment %}
