--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -351,13 +351,14 @@
 </div>
 <div class="g8PopupForm b2PopupConfirm confirmPresence pr">
     <div class="g8PopupContent">
-        <h3>Registro exitoso</h3>
+        <h3>Elije tu modalidad de participación</h3>
         <div class="gParrafo">
-            <p>Tu registro se ha compleado, ¿Deseas asistir al evento de forma Presencial?</p>
+            <p style="text-align: center;">El evento presencial se realizará el 11 de noviembre en el BCP de La Molina.</p>
+            <p style="text-align: center;">(Cupos limitados)</p>
         </div>
         <div class="b2Buttons g8Buttons f aic jcc">
-            <a href="#" data-status="1" class="gButton b2accept validatePerson">Sí</a>
-            <a href="#" data-status="0" class="gButton b2cancel validatePerson">No</a>
+            <a href="#" data-status="1" class="gButton b2accept validatePerson">Presencial</a>
+            <a href="#" data-status="0" class="gButton b2cancel validatePerson"><span>&emsp;</span>Virtual<span>&emsp;</span></a>
         </div>
     </div>
 </div>
